# sap_technical_assessment

./: .gitignore  CMakeLists.txt  README.md  task1.hpp  task2.hpp  task3.hpp  test.cpp
